crates/sdk-tests/tests/app/using_impl_not_allowed.stderr
error: using `impl` inside `#[app]` is not supported.
 --> $DIR/using_impl_not_allowed.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
