crates/sdk-tests/tests/app/using_impl_not_allowed.rs
use svm_sdk::app;

#[app]
mod App {
    struct S;

    impl S {}
}

fn main() {}
